# bluesky-notify

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  alembic.ini  bluesky_notify.db.old  cli.py  docker-compose.yml  migrate_db.py  notifier.py  podman-compose.yml  portainer-stack.yml  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: docker-publish.yml  docker.yml  python-publish.yml  release.yml  test.yml
config/: settings.py
data/: settings.json
migrations/: env.py
migrations/versions/: ed679a9c06f1_initial_migration.py
requirements/: base.txt  dev.txt
src/bluesky_notify/: __init__.py
src/bluesky_notify/api/: routes.py  server.py
src/bluesky_notify/cli/: commands.py
src/bluesky_notify/core/: config.py  database.py  logger.py  notifier.py  settings.py
src/bluesky_notify/services/launchd/: com.bluesky-notify.plist
src/bluesky_notify/static/: app.js
src/bluesky_notify/templates/: index.html
src/data/: bluesky_notify.db
src/instance/: bluesky_notify.db.old
templates/: index.html
tests/: conftest.py  test_app.py  test_hello_world.py  test_routes.py  test_server.py
