[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bluesky-notify"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A cross-platform desktop notification system for Bluesky"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "flask-migrate>=4.0.0",
    "flask-sqlalchemy>=3.0.0",
    "atproto>=0.0.28",
    "desktop-notifier>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/bluesky-notify"
"Bug Tracker" = "https://github.com/yourusername/bluesky-notify/issues"

[project.scripts]
bluesky-notify = "bluesky_notify.cli.commands:main"
